tests/errors/regex-empty-group/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0002]: Empty grouping in regular expression.
  ╭─▸ tests/errors/regex-empty-group/main.pa:2:14
  │
2 │ def main = `a()b`
  │              ^
  ╰─

error[E0026]: Unexpected token (a ')'). Expected a '`'.
  ╭─▸ tests/errors/regex-empty-group/main.pa:2:15
  │
2 │ def main = `a()b`
  │               ^
  ╰─
